Minor final touches to lab instrictions. Likely last version before print.

--- a/lab-instructions/dodlabs.tex
+++ b/lab-instructions/dodlabs.tex
@@ -65,7 +65,8 @@
 \newcommand{\commandchar}[1]{\textsc{#1}}
 
 \newcommand{\progname}{c3pu}
-\newcommand{\progfilename}{c3pu.jar}
+\newcommand{\progversion}{v1.0}
+\newcommand{\progfilename}{\progname-\progversion.jar}
 
 % Define the hint command
 \newcommand{\hint}[2][]{\par\halfblankline\noindent\textbf{Ledtråd\ifx#1\empty\else\space#1\fi}: #2\par}
