Working on slides. Small touch-ups on labs.

--- a/courseplan/courseplan.tex
+++ b/courseplan/courseplan.tex
@@ -29,14 +29,14 @@
     I kursen Datorer och datoranvändning får du en översikt över datatekniska begrepp och praktiska färdigheter som du kommer att ha användning av under dina studier. Kursen läses av studenter från C- och D-programmen. För C-studenter ingår den som en del av kursen EITA65.
 
     \item[Kursansvarig]
-    Mattias Nordahl, rum E2184, E-huset 2:a våningen.\\
+    Mattias Nordahl, rum E:2184, E-huset 2:a våningen.\\
     E-post: \url{mattias.nordahl@cs.lth.se}
 
     \item[Administratör]
-    Ulrika Templing, rum E2179, E-huset 2:a våningen. Expeditionstid 9.30--11.30. Telefon 046--222 80 40, e-post \url{expedition@cs.lth.se}
+    Ulrika Templing, rum E:2179, E-huset 2:a våningen. Expeditionstid 9.30--11.30. Telefon 046--222 80 40, e-post \url{expedition@cs.lth.se}
 
     \item[Hemsida]
-    \url{http://cs.lth.se/dod/}. Du bör titta på hemsidan regelbundet! Kort kursinformation finns också i Canvas, men hemsidan är den primära platsen för kursinformation.
+    \url{http://cs.lth.se/dod/}. Du bör titta på hemsidan regelbundet. Kort kursinformation finns också i Canvas, men hemsidan är den primära platsen för kursinformation.
 
     \item[Kursens omfattning]
     \begin{tabular}[t]{@{}ll}
@@ -64,8 +64,8 @@
     \begin{tabular}{lll}
         \emph{Dag}  & \emph{Ämne}                   & \emph{Anmärkning}   \\ \midrule
         Tisdag 3/9  & Introduktion, Linux/Unix      & Förberedelse, lab 1 \\
-        Tisdag 10/9 & \LaTeX                        & Förberedelse, lab 2 \\
-        Tisdag 17/9 & Versionshantering, Git/GitHub & Förberedelse, lab 3 \\
+        Tisdag 10/9 & Versionshantering, Git/GitHub & Förberedelse, lab 2 \\
+        Tisdag 17/9 & \LaTeX                        & Förberedelse, lab 3 \\
         Tisdag 24/9 & Maskinkod                     & Förberedelse, lab 4 \\
     \end{tabular}
     }
@@ -81,8 +81,8 @@
     \begin{tabular}{cl}
         \emph{Laboration} & \emph{Ämne} \\ \midrule
         D1                & Linux/Unix  \\
-        D2                & \LaTeX      \\
-        D3                & Git/GitHub  \\
+        D2                & Git/GitHub  \\
+        D3                & \LaTeX      \\
         D4                & Maskinkod   \\
     \end{tabular}
     }
