--- a/lab-instructions/modules/latex/latex.tex
+++ b/lab-instructions/modules/latex/latex.tex
@@ -1,51 +1,57 @@
 \section{Laboration \arabic{section} --- \LaTeX}
 
-\emph{Mål:} Du ska lära dig grunderna i \LaTeX och tillämpa dina kunskaper på ett exempel.
+\emph{Mål:} Du ska lära dig grunderna i {\LaTeX} och tillämpa dina kunskaper på ett exempel.
 
 
 \subsection*{Obligatoriska förberedelser (hemarbete)}
 \begin{Hemarbete}\firmlist
 	\item Titta igenom föreläsningsbilderna till föreläsningen om \LaTeX.
 	\item Läs igenom kompendiet \emph{Att skriva rapporter med \LaTeX}, åtminstone så mycket så att du blir bekant med vad man kan göra med \LaTeX. Du behöver inte försöka memorera alla detaljer.
-	\item \label{hem:latexuppg} Med början på nästa sida finns ett exempel på en rapport som är producerad med \LaTeX. Studera rapporten och försök komma på vilka kommandon som behövs för att få texten att se ut som den gör. Markera i rapporten, eller i ett textdokument, vilka kommandon du tänker använda.
+	\item \label{hem:latexuppg} Med början två sidor fram finns ett exempel på en rapport som är producerad med \LaTeX. Studera rapporten och försök komma på vilka kommandon som behövs för att få texten att se ut som den gör. Markera i rapporten, eller i ett separat textdokument, vilka kommandon du behöver använda för att efterlikna rapporten.
 \end{Hemarbete}
 
 \subsection*{Kontrollfrågor}
 \begin{Kontrollfragor}
 	\item Laborationsledaren kontrollerar att du gått igenom exempelrapporten och markerat vilka \LaTeX-kommandon du ska utnyttja för att formatera texten.
+	\halfblankline
 
 	% Förslag på faktiska kontrollfrågor. Eller räcker det med den ovan?
-	% \item På vilket sätt formaterar man text i \LaTeX. Hur markerar man t.ex. att ett ord ska vara fetstilt?
-	% \item Vad är \LaTeX och vad används det till?
-	% \item Vad är skillnaden mellan \LaTeX och vanliga textredigerare, som Word?
-	% \item Vilka är fördelarna med att använda \LaTeX för dokumentproduktion?
-	% \item Vad är ett \LaTeX-kommando och hur skrivs det i en dokumentfil?
-	% \item Vad är skillnaden mellan kompileringsprocessen för \LaTeX och vanlig textredigering?
-	% \item \LaTeX är helt textbaserat. Vad är processen för att producera det slutgiltiga, formaterade dokumentet?
-	% \item Vad är en paketfil i \LaTeX och hur inkluderar man den i dokumentet?
-	% \item Vilka är de grundläggande elementen för att skapa en titelsida i \LaTeX?
-	% \item Hur skapar du en fetstil i \LaTeX?
-	% \item Vad är kommandot för att kursivera text i \LaTeX?
-	% \item Hur skapar du en punktlista i \LaTeX?
-	% \item Vilket kommando används för att justera texten till vänster i \LaTeX?
-	% \item Hur inkluderar du citat i en \LaTeX-dokumentfil?
-	% \item Vilket kommando använder du för att infoga en radbrytning i \LaTeX?
-	% \item Hur skapar du en numrerad lista i \LaTeX?
-	% \item Hur skapar du en rubrik med ett kapitelnummer i \LaTeX?
-	% \item Vilket kommando används för att skapa en tabell i \LaTeX?
+	% \item På vilket sätt formaterar man text i {\LaTeX}. Hur markerar man t.ex. att ett ord ska vara fetstilt?
+	% \item Vad är {\LaTeX} och vad används det till?
+	\item Vad är skillnaden mellan {\LaTeX} och vanliga textredigerare, som MS Word?
+	\item Vilka fördelar finns med att använda {\LaTeX} för dokument?
+	\item Vad är ett {\LaTeX}-kommando och hur skrivs det i en dokumentfil?
+	\item Hur skapar man rubriker och underrubriker i {\LaTeX}?
+	\item Hur får man fet eller kursiv text i {\LaTeX}?
+	\item Vad betyder tecket \$ i {\LaTeX}?
+	\item Hur skriver du tecknet \$ i {\LaTeX}, utan att det tolkas som ett kommando?
+	% \item Vad är skillnaden mellan kompileringsprocessen för {\LaTeX} och vanlig textredigering?
+	% \item {\LaTeX} är helt textbaserat. Vad är processen för att producera det slutgiltiga, formaterade dokumentet?
+	% \item Vad är en paketfil i {\LaTeX} och hur inkluderar man den i dokumentet?
+	% \item Vilka är de grundläggande elementen för att skapa en titelsida i {\LaTeX}?
+	% \item Hur skapar du en fetstil i {\LaTeX}?
+	% \item Vad är kommandot för att kursivera text i {\LaTeX}?
+	% \item Hur skapar du en punktlista i {\LaTeX}?
+	% \item Vilket kommando används för att justera texten till vänster i {\LaTeX}?
+	% \item Hur inkluderar du citat i en {\LaTeX}-dokumentfil?
+	% \item Vilket kommando använder du för att infoga en radbrytning i {\LaTeX}?
+	% \item Hur skapar du en numrerad lista i {\LaTeX}?
+	% \item Hur skapar du en rubrik med ett kapitelnummer i {\LaTeX}?
+	% \item Vilket kommando används för att skapa en tabell i {\LaTeX}?
 
 \end{Kontrollfragor}
 
+\newpage
 
 \subsection*{Datorarbete}
 
 \textbf{Notis}: I instruktionerna nedan föreslår vi att ni använder programmet Texmaker för att arbeta med \LaTeX, men ni får lov att använda vilken editor ni vill. Det går också bra att använda onlineverktyg, så som Overleaf.
 
 \begin{Datorarbete}
-	\item Skapa en ny katalog med namnet \file{dod/lab2} och gå till denna katalog.
-	\item Kopiera filen \file{/usr/local/cs/dod/lab2/rapportmall.tex} till din katalog. Ge den kopierade filen namnet \file{rapport.tex}. Filen innehåller en \LaTeX-mall för rapporter, liknande den mall som beskrivs i avsnitt 2.2 i \LaTeX-kompendiet och i föreläsningsbilderna.
+	\item Skapa en ny katalog med namnet \file{dod/lab3} och gå till denna katalog.
+	\item Kopiera filen \file{/usr/local/cs/dod/lab3/rapportmall.tex} till din katalog. Ge den kopierade filen namnet \file{rapport.tex}. Filen innehåller en \LaTeX-mall för rapporter, liknande den mall som beskrivs i avsnitt 2.2 i \LaTeX-kompendiet och i föreläsningsbilderna.
 
-	\item I filen \file{/usr/local/cs/dod/lab2/rapporttext.txt} finns texten till rapporten som beskrivs i uppgift H\ref{hem:latexuppg}, utan några \LaTeX-kommandon och utan några figurer. Lägg in innehållet i denna fil i din \file{.tex}-fil, mellan \verb!\begin{document}! och \verb!\end{document}!.
+	\item I filen \file{/usr/local/cs/dod/lab3/rapporttext.txt} finns texten till rapporten som beskrivs i uppgift H\ref{hem:latexuppg}, utan några \LaTeX-kommandon och utan några figurer. Lägg in innehållet i denna fil i din \file{.tex}-fil, mellan \verb!\begin{document}! och \verb!\end{document}!.
 
 	\item Starta Texmaker med kommandot \verb/texmaker & / (eller \verb/texmaker rapport.tex &/).
 
@@ -53,7 +59,7 @@
 
 	Arbeta stegvis: ändra lite, klicka på pilen till vänster om Quick Build så körs pdfLaTeX, titta på resultatet, ändra lite till, osv.
 
-	Bilderna som ska inkluderas i dokumentet finns i filerna \file{nrbild.pdf} och \file{konvbild.pdf} i katalogen \file{/usr/local/cs/dod/lab2/}, programkoden finns i filen \file{NewtonRaphson.java} i samma katalog.
+	Bilderna som ska inkluderas i dokumentet finns i filerna \file{nrbild.pdf} och \file{konvbild.pdf} i katalogen \file{/usr/local/cs/dod/lab3/}, programkoden finns i filen \file{NewtonRaphson.java} i samma katalog.
 
 	\item Prova gärna att skriva ut rapporten på skrivaren när du är nöjd med dokumentets utseende (ej obligatoriskt).
 
