--- a/lectures/machine-code/slides.tex
+++ b/lectures/machine-code/slides.tex
@@ -21,6 +21,9 @@
 \usepackage{listings}
 \lstset{resetmargins=true}
 
+\usepackage{tikz}
+% Load additional TikZ libraries as needed
+\usetikzlibrary{shapes,arrows.meta,positioning,calc}
 
 % Code listing environment that removes leading whitespace
 \lstnewenvironment{GobbleCode}[2][\baselineskip]
